--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ pypdf>=3.0.0
 python-dotenv>=0.19.0
 requests>=2.26.0
 openai>=1.0.0
+cryptography==44.0.0
 
 # PDF Processing Tools
 pdfminer.six>=20221105
