--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 # Core Dependencies
-markitdown>=0.0.1a3
-pypdf>=3.0.0
-python-dotenv>=0.19.0
-requests>=2.26.0
-openai>=1.0.0
-cryptography==44.0.0
+markitdown
+pypdf
+python-dotenv
+requests
+openai
+cryptography
 
 # PDF Processing Tools
-pdfminer.six>=20221105
-pdf2image>=1.16.0
-opencv-python>=4.7.0
-camelot-py>=0.10.1
-ghostscript>=0.7
+pdfminer.six
+pdf2image
+opencv-python
+camelot-py
+ghostscript
 
 # Additional Dependencies
-spacy>=3.0.0
-tqdm>=4.65.0
-tenacity>=8.0.0
+spacy
+tqdm
+tenacity
 
 # Optional: For better PDF text extraction
-pytesseract>=0.3.10
+pytesseract
